# Financial-Time-Series-MLOps

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: stock_list.csv
data/day1_sample/: sample_headlines.csv  sample_prices.csv
data/scraped/: headlines_20260530_1605.csv
models/: create_dummy_model.py
role1_data_engineering/: README.md  requirements.txt
role1_data_engineering/airflow/dags/: data_pipeline_dag.py
role1_data_engineering/db/: init_db.py
role1_data_engineering/kafka/consumers/: headline_consumer.py  (+1 more)
role1_data_engineering/scrapers/: daily_scraper_orchestrator.py  headline_scraper.py  nse_preopen_scraper.py  ohlc_scraper.py  run_scraper.sh
role1_data_engineering/spark/: clean_headlines.py  clean_prices.py  join_data.py
role1_data_engineering/tests/: test_consumers.py  test_producers.py  test_spark_jobs.py
role2_ml_modeling/: README.md  mlflow_utils.py  requirements.txt
role2_ml_modeling/dvc/: .dvc_config_placeholder  dvc.yaml
role2_ml_modeling/features/: feature_engineering.py
role2_ml_modeling/models/: price_predictor.py  sentiment_model.py
role2_ml_modeling/tests/: test_features.py  test_models.py
role2_ml_modeling/training/: evaluate.py  train.py
role3_mlops_devops/: README.md  requirements.txt
role3_mlops_devops/api/: app.py  model_loader.py
role3_mlops_devops/docker/: Dockerfile  docker-compose.yml
role3_mlops_devops/monitoring/: drift_detector.py
role3_mlops_devops/tests/: test_api.py  test_docker_build.py
shared/: config.py
shared/schemas/: __init__.py  data_contract.py
(+5 files in other folders)
