[project]
name = "financial-time-series-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.6",
    "kafka>=1.3.5",
    "kafka-python>=2.3.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
